--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -7,7 +7,8 @@
     "types": [
       "jasmine",
       "node"
-    ]
+    ],
+    "experimentalDecorators": true 
   },
   "files": [
     "test.ts"
