--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@ngrx/store": "^5.2.0",
     "@ngrx/store-devtools": "^5.2.0",
     "bootstrap": "^4.1.1",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.6",
     "material-design-icons": "^3.0.1",
+    "npm": "^6.1.0",
     "rxjs": "^5.5.10",
     "zone.js": "^0.8.26"
   },
